--- a/package.json
+++ b/package.json
@@ -1,5 +1,30 @@
 {
-  "dependencies": {
-    "bootstrap": "^4.3.1"
-  }
+    "dependencies": {
+        "bootstrap": "^4.3.1",
+        "jquery": "^3.6.0"
+    },
+    "name": "food-festival",
+    "description": "",
+    "version": "1.0.0",
+    "main": "index.js",
+    "devDependencies": {
+        "webpack": "^5.66.0",
+        "webpack-cli": "^4.9.1"
+    },
+    "scripts": {
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "webpack": "webpack --watch",
+        "build": "webpack"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/Thorulfr/food-festival.git"
+    },
+    "keywords": [],
+    "author": "",
+    "license": "ISC",
+    "bugs": {
+        "url": "https://github.com/Thorulfr/food-festival/issues"
+    },
+    "homepage": "https://github.com/Thorulfr/food-festival#readme"
 }
