--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "main": "index.js",
     "devDependencies": {
         "webpack": "^5.66.0",
+        "webpack-bundle-analyzer": "^4.5.0",
         "webpack-cli": "^4.9.1"
     },
     "scripts": {
