--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
     "dependencies": {
         "bootstrap": "^4.3.1",
+        "image-webpack-loader": "^8.1.0",
         "jquery": "^3.6.0"
     },
     "name": "food-festival",
@@ -8,6 +9,7 @@
     "version": "1.0.0",
     "main": "index.js",
     "devDependencies": {
+        "file-loader": "^6.2.0",
         "webpack": "^5.66.0",
         "webpack-bundle-analyzer": "^4.5.0",
         "webpack-cli": "^4.9.1"
