--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
         "webpack": "^5.66.0",
         "webpack-bundle-analyzer": "^4.5.0",
         "webpack-cli": "^4.9.1",
-        "webpack-dev-server": "^4.7.3"
+        "webpack-dev-server": "^4.7.3",
+        "webpack-pwa-manifest": "^4.3.0"
     },
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
